Add new maintainer

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 The maintainer for this revision of Eve W-Space is:
 
 Marbin Drakon <marbin@evewspace.com>
+Jaakko Kantojärvi <jaakko@n-1.fi>
 
 The following people have contributed code to the project and their work is very much appreciated:
 
